Fixed spacing with variables. Added breakpoints for header.

--- a/_sass/_base.body.scss
+++ b/_sass/_base.body.scss
@@ -4,9 +4,14 @@
 
 body {
     display: flex;
+    flex-direction: column;
     background: $white;
     min-height: 100%;
     font: 100%/1.5 $font;
     -webkit-text-size-adjust: 100%;
     color: $gray-dark;
+    
+    @media all and (min-width: 35em) {
+	    flex-direction: row;
+    }
 }
